# pregnancy-predict-hackathon

./: .gitignore  README.md  pyproject.toml
docs/: git_branch_전략.md
experiments/core/: EXP001_DummyClassifier.py  EXP001_GBMCatEsemble.py
experiments/core/kim/: EXP001_CatBoost_baseline.py
experiments/core/park/: EXP001_GBMCatEsemble.py  EXP002_dl_ensemble.py  EXP003_seedesmble.py  EXP004_ultimate_ensemble.py  dl_baseline_submission.csv  final_unified_submission.csv  ml_seed_1234.csv  ml_seed_2024.csv  ml_seed_777.csv
experiments/core/song/: EXP002_LogisticRegression.py  EXP003_CatBoost.py  EXP004_LightGBM.py  EXP005_ExtraTrees.py  EXP006_LightGBM_FeatureEngineering.py  EXP007_LightGBM_FeatureGroupTest.py  EXP008_LightGBM_FeatureImportance.py  EXP009_LightGBM_FeatureGroupCombination.py
