[project]
name = "pregnancy-predict-hackathon"
version = "0.1.0"
description = "Pregnancy success prediction hackathon experiments"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "catboost==1.2.10",
    "lightgbm==4.6.0",
    "matplotlib==3.11.0",
    "numpy==2.4.6",
    "openpyxl==3.1.5",
    "pandas==3.0.3",
    "scikit-learn==1.9.0",
    "scipy==1.17.1",
    "seaborn==0.13.2",
    "xgboost==3.2.0",
]

[tool.uv]
package = false
